--- a/_posts/2024-09-05-colores.md
+++ b/_posts/2024-09-05-colores.md
@@ -88,6 +88,8 @@ Los ordenadores emplean estos tres colores para representar cualquier color de l
 
 A la hora de representar cada color utilizamos este modelo RGB y lo podemos hacer empleando tanto el sistema de numeración decimal como el sistema de numeración hexadecimal.
 
+Video voluntario:
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/PElLB0pm5SQ?si=3fY5MW0Qyg3nl8_i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ![alt text](ejemploSistemaRGB.png)
@@ -140,7 +142,10 @@ _Ejemplo de colores seguros_
 
 La imagen se corresponde a la misma elección que vimos en la imagen de la página anterior de este mismo apartado, pero seleccionando esta vez los colores seguros de la Web en los enlaces de la barra superior izquierda. Puedes comprobar que todos los códigos hexadecimales se corresponden con los mencionados en el párrafo anterior.
 
-{:.quesiton}
+{:.question}
+¿Qué son los colores seguros?
+
+{:.question}
 ¿Qué significa sRGB?
 
 {:.section}
@@ -150,15 +155,43 @@ La psicología del color es un campo de estudio que explora cómo los diferentes
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/X8kbrAzV6BM?si=36BMIy8d8z-kghfJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+{:.question}
+¿Qué es la psicología del color?
+
 {:.section}
 ## Color en CSS
 
 A la hora de utilizar el color en CSS debemos conocer, al menos, 3 formas de definir colores a los elementos HTML:
 
-- Mediante palabras clave. Lee el artículo [Códigos de colores](https://lenguajecss.com/css/colores/codigos-color/).
-- Mediante la función RGB. Lee el artículo [La función RGB()](https://lenguajecss.com/css/colores/funcion-rgb/).
-- Mediante el formato hexadecimal. Lee el artículo [El formato hexadecimal](https://lenguajecss.com/css/colores/formato-hexadecimal/).
-- Mediante el formato HSL. Lee el artículo [Descripción del modelo de color HSL](https://logongas.es/lib/exe/fetch.php?media=clase:daw:diw:1eval:color_hsl.pdf).
+- Mediante palabras clave.
+  - Lee el artículo [Códigos de colores](https://lenguajecss.com/css/colores/codigos-color/).
+- Mediante la función RGB.
+  - Lee el artículo [La función RGB()](https://lenguajecss.com/css/colores/funcion-rgb/).
+- Mediante el formato hexadecimal.
+  - Lee el artículo [El formato hexadecimal](https://lenguajecss.com/css/colores/formato-hexadecimal/).
+- Mediante el formato HSL.
+  - (Voluntario) Lee el artículo [Descripción del modelo de color HSL](https://logongas.es/lib/exe/fetch.php?media=clase:daw:diw:1eval:color_hsl.pdf).
+
+{:.question}
+¿Qué significan las siglas RGB?
+
+{:.question}
+En CSS, se puede representar el color rojo con la palabra `red`?
+
+{:.question}
+¿Qué diferencia hay entre la notación legacy y la notación moderna?
+
+{:.question}
+¿Tiene algo que ver la notación RGB con la notación hexadecimal?
+
+{:.question}
+¿Para qué sirve el canal alfa?
+
+{:.question}
+¿Qué número en decimal simboliza `FF` (en hexadecimal)?
+
+{:.question}
+¿Qué significan las siglas HSL?
 
 ## Bibliografía
 
