--- a/_posts/2024-09-05-colores.md
+++ b/_posts/2024-09-05-colores.md
@@ -159,39 +159,9 @@ La psicología del color es un campo de estudio que explora cómo los diferentes
 ¿Qué es la psicología del color?
 
 {:.section}
-## Color en CSS
+## AVANZADO Color en CSS
 
-A la hora de utilizar el color en CSS debemos conocer, al menos, 3 formas de definir colores a los elementos HTML:
-
-- Mediante palabras clave.
-  - Lee el artículo [Códigos de colores](https://lenguajecss.com/css/colores/codigos-color/).
-- Mediante la función RGB.
-  - Lee el artículo [La función RGB()](https://lenguajecss.com/css/colores/funcion-rgb/).
-- Mediante el formato hexadecimal.
-  - Lee el artículo [El formato hexadecimal](https://lenguajecss.com/css/colores/formato-hexadecimal/).
-- Mediante el formato HSL.
-  - (Voluntario) Lee el artículo [Descripción del modelo de color HSL](https://logongas.es/lib/exe/fetch.php?media=clase:daw:diw:1eval:color_hsl.pdf).
-
-{:.question}
-¿Qué significan las siglas RGB?
-
-{:.question}
-En CSS, se puede representar el color rojo con la palabra `red`?
-
-{:.question}
-¿Qué diferencia hay entre la notación legacy y la notación moderna?
-
-{:.question}
-¿Tiene algo que ver la notación RGB con la notación hexadecimal?
-
-{:.question}
-¿Para qué sirve el canal alfa?
-
-{:.question}
-¿Qué número en decimal simboliza `FF` (en hexadecimal)?
-
-{:.question}
-¿Qué significan las siglas HSL?
+Lee el artículo [Color en CSS](/posts/color-css).
 
 ## Bibliografía
 
