--- a/_posts/2024-10-09-color-css.md
+++ b/_posts/2024-10-09-color-css.md
@@ -17,10 +17,30 @@ Al utilizar estilos de forma habitual tendrás que establecer el color del los d
 - Mediante el formato hexadecimal.
   - Lee el artículo [El formato hexadecimal](https://lenguajecss.com/css/colores/formato-hexadecimal/).
 - Mediante el formato HSL.
+  - (Voluntario) Leer [Formato HSL](https://lenguajecss.com/css/colores-y-fondos/colores-css/#formato-hsl).
   - (Voluntario) Lee el artículo [Descripción del modelo de color HSL](https://logongas.es/lib/exe/fetch.php?media=clase:daw:diw:1eval:color_hsl.pdf).
 
-{:.question}
-¿Qué significan las siglas RGB?
+<details class="card mb-2">
+  <summary class="card-header question">¿De dónde a dónde van los valores de los colores RGB? ¿Qué significa la A de RGBA?</summary>
+  <div class="card-body" markdown="1">
+
+Las formas de indicar un color en CSS son las siguientes:
+
+| Esquema   | Nombre                                | Descripción                                                      |
+| --------- | ------------------------------------- | ---------------------------------------------------------------- |
+| `red`     | Palabra clave predefinida             | Establece un color mediante una palabra clave predefinida.       |
+| `rgb()`   | Función RGB                           | Utiliza una función rgb() (rojo, verde, azul).                   |
+| `rgba()`  | Función RGB con canal alfa            | Función rgb() o rgba() con un canal alfa (opacidad) añadido.     |
+| `#rrggbb` | Código RGB hexadecimal                | Notación RGB abreviada en hexadecimal.                           |
+| `#rgb`    | Código RGB hexadecimal con canal alfa | Notación RGB abreviada en hexadecimal con un canal alfa añadido. |
+| `hsl()`   | Función HSL                           | Función hsl() (matiz de color, saturación y brillo).             |
+| `hsla()`  | Función HSL con canal alfa            | Función hsl() o hsla() con un canal alfa añadido.                |
+
+Puedes probarlo tú mismo en [este enlace](https://www.w3schools.com/cssref/tryit.php?filename=trycss_func_rgba).
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 {:.question}
 En CSS, se puede representar el color rojo con la palabra `red`?
@@ -37,8 +57,15 @@ En CSS, se puede representar el color rojo con la palabra `red`?
 {:.question}
 ¿Qué número en decimal simboliza `FF` (en hexadecimal)?
 
-{:.question}
-¿Qué significan las siglas HSL?
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué significan las siglas HSL?</summary>
+  <div class="card-body" markdown="1">
+
+Las siglas HSL significan matiz de color (hue), saturación y luminosidad (brillo). La primera cifra selecciona el matiz de color, representado con H en el círculo exterior de la imagen. Se trata de un valor ANGLE  de 0deg a 360deg. Por otro lado, las dos siguientes, son el porcentaje PERCENT de saturación y el brillo del color, respectivamente, en ambos casos un valor de 0% a 100%.
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 ## Color del primer plano
 
