--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -17,32 +17,13 @@ En este articulo vamos a aprender a utilizar el lenguaje de estilos CSS.
 - Sirve para dar forma, estilo y colores a una página web.
 
 <details class="card mb-2">
-  <summary class="card-header question">¿Qué son y para qué sirven los combinators o combinadores?</summary>
-  <div class="card-body" markdown="1">
-
-Al margen de la selección "básica" de elementos a través de CSS, que suele realizarse mediante clases e IDs, existe un amplio abanico de métodos para seleccionar elementos dependiendo de la estructura del documento HTML denominados combinadores CSS:
-
-| Nombre  | Símbolo  | Ejemplo  | Significado |
-|---|---|---|---|
-| Agrupación de selectores  | `,`  | `p, a, div { }` | Se aplican estilos a varios elementos. |
-| Selector descendiente  | Espacio | `#page div { }` | Se aplican estilos a elementos dentro de otros. |
-| Selector hijo  | `>`  | `#page > div { }` | Se aplican estilos a elementos hijos directos. |
-| Selector hermano adyacente  | `+` | `div + div { }` | Se aplican estilos a elementos que siguen a otros. |
-| Selector hermano general  | `~`  | `div ~ div { }` | Se aplican estilos a elementos al mismo nivel. |
-| Selector universal  | `*`  | `#page * { }`  | Se aplican estilos a todos los elementos. |
-
-<!-- Comentario para que no se descuajeringue la cosa -->
-  </div>
-</details>
-
-<details class="card mb-2">
   <summary class="card-header question">¿Qué significa que una web es responsive?</summary>
   <div class="card-body" markdown="1">
 
 El diseño web responsive o adaptativo es una técnica de diseño web que busca la correcta visualización de una misma página en distintos dispositivos. Desde ordenadores de escritorio a tablets y móviles.
 
 Hoy en día accedemos a sitios web desde todo tipo de dispositivos; ordenador, tablet, smartphone… por lo que, cada vez más, nos surge la necesidad de que nuestra web se adapte a los diferentes tamaños de los mismos.
-    
+
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
 </details>
@@ -86,56 +67,12 @@ Puedo usar la coma.
 </details>
 
 <details class="card mb-2">
-  <summary class="card-header question" markdown="1">
-
-¿Qué diferencia hay entre `text-transform: uppercase` y `text-transform: capitalize` de la propiedad ?
-
-  </summary>
-  <div class="card-body" markdown="1">
-
-- `uppercase` para convertir textos a mayúsculas.
-- `lowercase` para convertir textos a minúsculas.
-- `capitalize` poner sólo la primera letra en mayúscula.
-
-<!-- Comentario para que no se descuajeringue la cosa -->
-  </div>
-</details>
-
-<details class="card mb-2">
   <summary class="card-header question">¿Qué significa indentar?</summary>
   <div class="card-body" markdown="1">
 
 Se llama indentación de código al hecho de utilizar sangrado (mover ligeramente hacia la derecha) en las líneas de código para facilitar la lectura, e indicar visualmente si nos encontramos en el interior de una función, bucle, condicional, etc...
 
 Si quieres saber más puedes leer el artículo [Indentación de código](https://lenguajejs.com/javascript/introduccion/indentacion/).
-
-<!-- Comentario para que no se descuajeringue la cosa -->
-  </div>
-</details>
-
-
-
-<details class="card mb-2">
-  <summary class="card-header question" markdown="1">
-
-¿Qué es `font-variant: small-caps`?
-
-  </summary>
-  <div class="card-body" markdown="1">
-
-Puedes verlo en [aquí](https://www.w3schools.com/cssref/tryit.php?filename=trycss_font-variant).
-
-<!-- Comentario para que no se descuajeringue la cosa -->
-  </div>
-</details>
-
-<details class="card mb-2">
-  <summary class="card-header question">¿Qué diferencia hay entre una pseudoclase y un pseudoelemento?</summary>
-  <div class="card-body" markdown="1">
-
-[Pseudoclases CSS](https://lenguajecss.com/css/selectores/pseudoclases/)
-
-[Pseudoelementos CSS](https://lenguajecss.com/css/selectores/pseudoelementos/)
 
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
@@ -167,10 +104,6 @@ Lee el artículo [Atributos CSS](https://lenguajecss.com/css/selectores/atributo
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
 </details>
-
-
-
-
 
 <details class="card mb-2">
   <summary class="card-header question" markdown="1">
@@ -205,12 +138,12 @@ Puedes ver el comportamiento de la propiedad `text-overflow` en [este enlace](ht
 <details class="card mb-2">
   <summary class="card-header question" markdown="1">
 
-¿Para que  sirve definir un `@font-face` en CSS?
+¿Para qué sirve definir un `@font-face` en CSS?
 
   </summary>
   <div class="card-body" markdown="1">
 
-La regla @font-face permite descargar una fuente o tipografía de una página web, cargarla en el navegador y utilizarla en nuestras páginas aunque no esté instalada en el sistema. Todo ello de forma transparente al usuario, sin que deba realizar ninguna acción.
+La regla `@font-face` permite descargar una fuente o tipografía de una página web, cargarla en el navegador y utilizarla en nuestras páginas aunque no esté instalada en el sistema. Todo ello de forma transparente al usuario, sin que deba realizar ninguna acción.
 
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
