--- a/_posts/2022-10-17-css.md
+++ b/_posts/2022-10-17-css.md
@@ -47,59 +47,12 @@ Puedes visitar <https://www.w3schools.com/css/css3_mediaqueries.asp> para saber 
 </details>
 
 <details class="card mb-2">
-  <summary class="card-header question">¿Qué hago si quiero añadir dos clases al mismo elemento?</summary>
-  <div class="card-body" markdown="1">
-
-Los separo con un espacio.
-
-<!-- Comentario para que no se descuajeringue la cosa -->
-  </div>
-</details>
-
-<details class="card mb-2">
-  <summary class="card-header question">¿Qué hago si quiero añadir el mismo estilo a varios elementos?</summary>
-  <div class="card-body" markdown="1">
-
-Puedo usar la coma.
-
-<!-- Comentario para que no se descuajeringue la cosa -->
-  </div>
-</details>
-
-<details class="card mb-2">
   <summary class="card-header question">¿Qué significa indentar?</summary>
   <div class="card-body" markdown="1">
 
 Se llama indentación de código al hecho de utilizar sangrado (mover ligeramente hacia la derecha) en las líneas de código para facilitar la lectura, e indicar visualmente si nos encontramos en el interior de una función, bucle, condicional, etc...
 
 Si quieres saber más puedes leer el artículo [Indentación de código](https://lenguajejs.com/javascript/introduccion/indentacion/).
-
-<!-- Comentario para que no se descuajeringue la cosa -->
-  </div>
-</details>
-
-<details class="card mb-2">
-  <summary class="card-header question">¿Puedo seleccionar diferentes elementos que compartan un atributo?</summary>
-  <div class="card-body" markdown="1">
-
-Si. Es el llamado selector por atributo que está explicado en el artículo [Atributos CSS](https://lenguajecss.com/css/selectores/atributos/).
-
-<!-- Comentario para que no se descuajeringue la cosa -->
-  </div>
-</details>
-
-<details class="card mb-2">
-  <summary class="card-header question" markdown="1">
-
-¿Qué diferencia hay entre el selector de atributo `[attribute~="value"]` y el  selector `[attribute*="value"]`?
-
-  </summary>
-  <div class="card-body" markdown="1">
-
-- `[attribute*="value"]` indica que el atributo `atribute` contiene el texto `value`.
-- `[attribute~="value"]` nos permitiría seleccionar los elementos HTML que tengan un atributo con una lista de palabras separadas por espacios, donde una de ellas es el texto que hemos escrito a continuación. Se trata de una versión más restrictiva del comparador `*=`.
-
-Lee el artículo [Atributos CSS](https://lenguajecss.com/css/selectores/atributos/) si quieres saber más.
 
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
@@ -211,7 +164,7 @@ div:hover {
   </summary>
   <div class="card-body" markdown="1">
 
-Que el ancho del div se modificará dependiendo de si el ratón está encima del mismo o no.
+Que el ancho del `div` se modificará dependiendo de si el ratón está encima del mismo o no.
 
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
@@ -230,8 +183,6 @@ Mira este ejemplo de W3Schools [Elements with Different timing function Values](
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
 </details>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/3yM5uXp-T_0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/hfnMLsWQb1w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
