--- a/_posts/2024-10-09-color-css.md
+++ b/_posts/2024-10-09-color-css.md
@@ -6,6 +6,7 @@ tags: [fp, ciclo superior, modulo, formación profesional, daw, desarrollo de ap
 img_path: /assets/img/color-css/
 ---
 
+{:.section}
 ## Introducción
 
 Al utilizar estilos de forma habitual tendrás que establecer el color del los diferentes elementos, por lo que debes conocer el modo de hacerlo. Los colores en CSS se pueden indicar de varias formas diferentes:
@@ -67,6 +68,7 @@ Las siglas HSL significan matiz de color (hue), saturación y luminosidad (brill
   </div>
 </details>
 
+{:.section}
 ## Color del primer plano
 
 La propiedad `color` es la que debes utilizar para configurar el color del primer plano, es decir, el color del texto y el color por defecto del borde de un elemento.
@@ -93,6 +95,7 @@ p {color: rgb(0%, 0%, 255%); }
 p {color: gray; }
 ```
 
+{:.section}
 ## Color de fondo
 
 Con la propiedad `background-color` no sólo se puede proporcionar un color de fondo a toda la página, también se puede configurar el color de fondo de cualquier elemento del documento, tanto si son elementos de bloque como de línea.
@@ -108,6 +111,7 @@ p {
 }
 ```
 
+{:.section}
 ## Imágenes de fondo
 
 Las imágenes las podrás configurar de forma muy completa ya que, además de poner una imagen como fondo de una página, podrás ajustar su punto de partida, su patrón de repetición, su posición dentro de un elemento cualquiera y lograr que permanezca fija en esa posición aunque se mueva el resto del documento. Para realizar esta configuración detallada se emplean las propiedades:
@@ -118,6 +122,7 @@ Las imágenes las podrás configurar de forma muy completa ya que, además de po
 - `background-attachment`
 - `background`
 
+{:.subsection}
 ### background-image
 
 Esta propiedad sirve para configurar la imagen de fondo de cualquier elemento.
@@ -131,6 +136,7 @@ body {background-image: url(fondo.gif); }
 p#cabecera {background-image: url(fondo-cuerpo.gif); }
 ```
 
+{:.subsection}
 ### background-repeat
 
 Permite configurar a tu gusto la forma en la que se repetirá la imagen cuando su tamaño sea más pequeño que la ventana del navegador. También permite evitar que la imagen se repita.
@@ -149,6 +155,7 @@ Explicación del código:
 1. En la segunda línea, la imagen se repetirá a lo ancho (horizontalmente) tantas veces como necesite.
 1. En la tercera línea, la imagen de fondo se repetirá a lo largo del documento (verticalmente).
 
+{:.subsection}
 ### background-position
 
 Especifica la posición de la primera imagen que cubrirá el fondo del elemento en el que esté definida esta propiedad. Al posicionamiento podemos asignarles los valores: `left`, `right`, `top`, `bottom` y `center` los cuales se usan, normalmente, de dos en dos sin importar el orden (uno indica su posición horizontal y el otro indica su posición vertical). Si sólo se indica una, se supone que la otra es `center`.
@@ -185,10 +192,12 @@ body {
 }
 ```
 
+{:.subsection}
 ### background-attachment
 
 Con esta propiedad puedes fijar la imagen en una posición concreta. Se le pueden asignar los valores: `scroll`, `fixed` e `inherit`, siendo `scroll` el valor por defecto. Se suele emplear el valor `fixed` para conseguir que la imagen no se desplace con el documento.
 
+{:.subsection}
 ### background
 
 Esta propiedad permite configurar todas las propiedades de fondo vistas anteriormente usando una única declaración, de forma similar a lo que ocurría con la propiedad `font`, pero a diferencia de ésta, no tiene ninguna propiedad obligatoria y sus valores pueden aparecer en cualquier orden.
@@ -212,6 +221,7 @@ p {
 }
 ```
 
+{:.section}
 ## Opacidades
 
 La opacidad es una característica de los elementos que nos permite mostrar o no otros elementos que tengan por debajo. Para conseguir efectos de transparencia en algunos elementos tienes las siguientes propiedades:
@@ -219,10 +229,12 @@ La opacidad es una característica de los elementos que nos permite mostrar o no
 - `opacity`
 - `filter`
 
+{:.subsection}
 ### opacity
 
 Esta propiedad permite asignar valores comprendidos entre 0 (invisible o totalmente transparente) y 1 (totalmente opaco).
 
+{:.subsection}
 ### filter
 
 Esta propiedad tiene varios efectos: degradaciones, desenfocados, sombras, etcétera. Para lograr la transparencia hay que aplicar el filtro alpha, con valores entre 0 y 100.
