--- a/_posts/2024-09-05-colores.md
+++ b/_posts/2024-09-05-colores.md
@@ -28,6 +28,9 @@ _Rueda del color_
   - Los colores análogos son los colores que se encuentran juntos en la rueda de color. Se suelen usar para crear la armonía del color.
   - Los colores monocrómáticos son todos los tonos y matices de un mismo color.
 
+{:.question}
+¿Qué son los complementarios análogos?
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7Sc-WkcQKj4?si=iezwP8nG8KRVYlb0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 Puedes usar las siguientes webs para diseñar paletas de colores para tu web:
