--- a/_posts/2024-09-05-colores.md
+++ b/_posts/2024-09-05-colores.md
@@ -28,8 +28,22 @@ _Rueda del color_
   - Los colores análogos son los colores que se encuentran juntos en la rueda de color. Se suelen usar para crear la armonía del color.
   - Los colores monocrómáticos son todos los tonos y matices de un mismo color.
 
-{:.question}
-¿Qué son los complementarios análogos?
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué son los colores complementarios análogos?</summary>
+  <div class="card-body" markdown="1">
+
+Los colores complementarios análogos son una combinación de dos conceptos de teoría del color: los colores complementarios y los colores análogos.
+
+Para formar una combinación de colores complementarios análogos, se elige un color y su complementario, y luego se eligen los colores análogos cercanos a cada uno.
+
+Ejemplo: Si tomamos el color azul y su complementario naranja, los colores complementarios análogos serían:
+
+- Azul y sus análogos (azul-verde y azul-violeta)
+- Naranja y sus análogos (rojo-naranja y amarillo-naranja)
+
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7Sc-WkcQKj4?si=iezwP8nG8KRVYlb0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
