--- a/_posts/2024-10-23-tarea-dom.md
+++ b/_posts/2024-10-23-tarea-dom.md
@@ -3,7 +3,7 @@ title: "Tarea obligatoria: DOM"
 date: 2024-10-23 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Web, Desarrollo Web en Entorno Cliente]
 tags: [fp, ciclo superior, modulo, formación profesional, daw, desarrollo de aplicaciones web, desarrollo web en entorno cliente, dwec, tarea, práctica]
-img_path: /assets/img/tarea-dom./
+img_path: /assets/img/tarea-dom/
 ---
 
 > Artículo en construcción.
