--- a/_posts/2024-10-23-tarea-dom.md
+++ b/_posts/2024-10-23-tarea-dom.md
@@ -19,9 +19,14 @@ Duración actividades obligatorias: 10 horas.
 
 RA 2. Escribe sentencias simples, aplicando la sintaxis del lenguaje y verificando su ejecución sobre navegadores Web.
 
+
+
 ## Actividades
 
 Es muy importante leer los apuntes y realizar las actividades. Los actividades de esta unidad son base para la realización de actividades en las próximas unidades.
+
+{:.activity}
+### 
 
 {:.activity}
 ### Obtén el atributo
