--- a/_posts/2024-10-23-tarea-dom.md
+++ b/_posts/2024-10-23-tarea-dom.md
@@ -24,29 +24,28 @@ RA 2. Escribe sentencias simples, aplicando la sintaxis del lenguaje y verifican
 Es muy importante leer los apuntes y realizar las actividades. Los actividades de esta unidad son base para la realización de actividades en las próximas unidades.
 
 {:.activity}
-### Obtén el atributo
+### Atributo
 
 Escribe el código para obtener el atributo `data-widget-name` del documento y leer su valor.
 
 ```javascript
 <!DOCTYPE html>
 <html>
-<body>
+  <body>
+    <div data-widget-name="menu">Elige el genero</div>
 
-  <div data-widget-name="menu">Elige el genero</div>
-
-  <script>
-    /* Tu código */
-  </script>
-</body>
+    <script>
+      /* Tu código */
+    </script>
+  </body>
 </html>
 ```
 
-> 📷 Cuando termines todos los pasos, haz varias capturas para demostrar que has realizado la actividad de manera satisfactoria.
+> 📷 Cuando termines, haz varias capturas para demostrar que has realizado la actividad de manera satisfactoria.
 {:.prompt-info}
 
 {:.activity}
-### Haz los enlaces externos naranjas
+### Enlaces externos naranjas
 
 Haz todos los enlaces externos de color orange alterando su propiedad `style`.
 
@@ -79,7 +78,23 @@ El resultado podría ser:
 
 ![alt text](enlacesNaranjas.png)
 
-> 📷 Cuando termines todos los pasos, haz varias capturas para demostrar que has realizado la actividad de manera satisfactoria.
+> 📷 Cuando termines, haz varias capturas para demostrar que has realizado la actividad de manera satisfactoria.
+{:.prompt-info}
+
+{:.activity}
+### Enlaces externos naranjas con clase
+
+Haz todos lo mismo que en la actividad anterior pero modificando la clase de los elementos.
+
+> 📷 Cuando termines, haz varias capturas para demostrar que has realizado la actividad de manera satisfactoria.
+{:.prompt-info}
+
+{:.activity}
+### Depuración en freeCodeCamp
+
+Ir a la certificación [Algoritmos de JavaScript y Estructuras de Datos](https://www.freecodecamp.org/espanol/learn/javascript-algorithms-and-data-structures/) y hacer el curso "Depuración".
+
+> 📷 Cuando termines todos los pasos, haz una captura de tu perfil.
 {:.prompt-info}
 
 {:.activity}
@@ -91,7 +106,7 @@ Ir a la certificación [Algoritmos de JavaScript y Estructuras de Datos](https:/
 {:.prompt-info}
 
 {:.activity}
-### Anagrama
+### (Voluntaria) Anagrama
 
 Escribe una función que reciba dos palabras (`string`) y retorne verdadero o falso (`boolean`) según sean o no anagramas.
 
@@ -121,6 +136,17 @@ Crea un programa que sea capaz de transformar texto natural a código morse y vi
 {:.prompt-info}
 
 {:.activity}
+### Código morse con memoria
+
+Haz que aunque se actualice la web con F5 el último resultado generado no desaparezca. 
+
+> Deberás usar el objeto `window` para guardar esta información.
+{:.prompt-info}
+
+> 📷 Cuando termines todo, haz varias capturas para demostrar que has realizado la actividad de manera satisfactoria.
+{:.prompt-info}
+
+{:.activity}
 ### Expresiones equilibradas
 
 Crea un programa que comprueba si los paréntesis, llaves y corchetes de una expresión están equilibrados.
@@ -137,9 +163,9 @@ Crea un programa que comprueba si los paréntesis, llaves y corchetes de una exp
 {:.prompt-info}
 
 {:.activity}
-### ¿Es un palíndromo?
+### (Voluntaria) ¿Es un palíndromo?
 
-Escribe una función que reciba un texto y retorne verdadero o falso (boolean) según sean o no palíndromos.
+Escribe una función que reciba un texto y retorne verdadero o falso (`boolean`) según sean o no palíndromos.
 
 Un Palíndromo es una palabra o expresión que es igual si se lee de izquierda a derecha que de derecha a izquierda.
 
@@ -152,6 +178,14 @@ Ejemplo de palíndromo: Ana lleva al oso la avellana.
 
 > 📷 Cuando termines todo, haz varias capturas para demostrar que has realizado la actividad de manera satisfactoria.
 {:.prompt-info}
+
+{:.activity}
+### Tabla de primos
+
+Escribe un programa que reciba un número \<X\> y muestre en el `body` los números primos entre 1 y \<X\> en forma de tabla.
+
+- Los datos deben ser recogido a través de un `input`.
+- El resultado debe ser mostrado en el `body` de una ventana o pestaña diferente.
 
 {:.activity}
 ### (Voluntaria) DOM en ventana principal
@@ -184,7 +218,7 @@ Donde aparecen las \<XXXX\> tendrá que aparecer el cálculo o texto que corresp
 {:.prompt-info}
 
 {:.activity}
-### (Voluntaria) DOM en ventana secundaria
+### DOM en ventana secundaria
 
 Realizar una aplicación en HTML y JavaScript que realice lo siguiente:
 
@@ -203,14 +237,6 @@ Hacer y llamar a una función que:
 Donde aparecen las \<XXXX\> tendrá que aparecer el cálculo o texto que corresponda.
 
 > 📷 Cuando termines todos los pasos, haz varias capturas para demostrar que has realizado la actividad de manera satisfactoria.
-{:.prompt-info}
-
-{:.activity}
-### Programación orientada a objetos en freeCodeCamp
-
-Ir a la certificación [Algoritmos de JavaScript y Estructuras de Datos](https://www.freecodecamp.org/espanol/learn/javascript-algorithms-and-data-structures/) y hacer el curso "Programación orientada a objetos en freeCodeCamp".
-
-> 📷 Cuando termines todos los pasos, haz una captura de tu perfil.
 {:.prompt-info}
 
 ## Dame tu feedback
