--- a/_posts/2024-11-18-video-web.md
+++ b/_posts/2024-11-18-video-web.md
@@ -178,18 +178,7 @@ Los primeros pasos para realizar un vídeo para la Web coinciden con los pasos p
 
 Recuerda que un vídeo almacena gran cantidad de información y su peso es proporcional a su duración. Si crees que no es necesario evítalo.
 
-Existen diferentes editores de vídeo en la actualidad:
-
-- **Kdenlive**: Gratuito y profesional. RECOMENDADO.
-- **OpenShot**: Gratuito y profesional.
-- **Final Cut Pro**: Profesional. Solo para dispositivos Apple.
-- **Adobe Premiere Pro**: Profesional.
-- **Sony Vegas**: Profesional.
-- **DaVinci Resolve**: Profesional.
-- **AVS Video Editor**: Sencillo.
-- **iMovie**: Sencillo y gratuito. Solo para dispositivos Apple.
-- **Filmora**: Sencillo.
-- **Shotcut**: Gratuito.
+Existen diferentes editores de vídeo en la actualidad. Puedes leer el artículo [Cómo grabar y editar vídeos](/posts/videos-youtube/) para conocerlos.
 
 <details class="card mb-2">
   <summary class="card-header question">¿Qué se debe tener en cuenta a la hora de crear un vídeo para la Web?</summary>
