--- a/_posts/2024-11-17-audio-web.md
+++ b/_posts/2024-11-17-audio-web.md
@@ -34,6 +34,10 @@ Los límites de la audición humana están entre los 20 y los 20.000 Hz y para c
   </div>
 </details>
 
+(Voluntario) Mira el siguiente vídeo:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MquQQX0Ak0k?si=MAYdOjQVCw3JUglT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Uso de sonido en la Web
 
 Cuando estamos diseñando un sitio Web, tenemos que tomar ciertas decisiones referentes al sonido que queremos incorporar.
@@ -53,6 +57,8 @@ En este apartado veremos algunos formatos de sonido que se emplean en la Web, ha
 1. **RA** (Real Audio): Es un formato empleado en la transmisión de sonido por Internet en tiempo real sin necesidad de descarga previa de un archivo. Es un modo de streaming que permite variar la velocidad de transmisión para adaptarse a las características de la conexión del usuario.
 1. **WMA** (Windows Media Audio): Es un formato de compresión con pérdida, propiedad de Microsoft creado como alternativa al MP3 y RealAudio.
 1. **AAC** (Advanced Audio Coding, Codificación Avanzada de Sonido): Es un formato estándar creado por MPEG (Moving Pictures Expert Group) que utiliza una tasa de bits variable y tiene un rendimiento superior al MP3. Soporta sonido multicanal y puede alcanzar una frecuencia de muestreo de 96 Khz. Se puede codificar un archivo de audio en AAC con un bitrate inferior al equivalente en MP3 y mantener la misma calidad sonora.
+
+(Voluntario) Mira el siguiente vídeo: <https://youtube.com/shorts/WoJVdXl1wMw?si=7i2xcoHTP81dq28g>.
 
 Todos los formatos expuestos anteriormente son formatos de compresión con pérdida, aunque no son los únicos. También hay formatos de **compresión sin pérdida** como:
 
@@ -126,6 +132,12 @@ Relaciona los formatos con el tipo al que pertenecen, escribiendo el número aso
 </details>
 
 En la web de Referencia de Mozilla tienes el artículo [Contenido de audio y video](https://developer.mozilla.org/es/docs/Learn/HTML/Multimedia_and_embedding/Video_and_audio_content) donde puedes aprender cómo se puede añadir elementos de audio y video en una web.
+
+## Cómo conseguir sonidos
+
+(Voluntario) Mira el siguiente vídeo:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sNAOMArlBro?si=uxSuKPPh5ch7pN89" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ## Bibliografía
 
