--- a/_posts/2024-11-17-audio-web.md
+++ b/_posts/2024-11-17-audio-web.md
@@ -38,6 +38,10 @@ Los límites de la audición humana están entre los 20 y los 20.000 Hz y para c
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/MquQQX0Ak0k?si=MAYdOjQVCw3JUglT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+(Voluntario) Mira el siguiente vídeo:
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Sr8d6nnsKqA?si=l__UeaUTxq6HiFo-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 ## Uso de sonido en la Web
 
 Cuando estamos diseñando un sitio Web, tenemos que tomar ciertas decisiones referentes al sonido que queremos incorporar.
