--- a/_posts/2024-11-17-audio-web.md
+++ b/_posts/2024-11-17-audio-web.md
@@ -112,24 +112,31 @@ También podemos grabar un sonido con el micrófono de nuestro ordenador utiliza
 <details class="card mb-2">
   <summary class="card-header question" markdown="1">
 
-Relaciona los formatos con el tipo al que pertenecen, escribiendo el número asociado al tipo en el hueco correspondiente.
+Relaciona los formatos con el tipo al que pertenecen.
 
-| Formato | Relación | Tipo de formato                                 |
-| ------- | -------- | ----------------------------------------------- |
-| Ogg.    |          | 1. Contenedor de múltiples formatos             |
-| AVI.    |          | 2. Formato de sonido con compresión sin pérdida |
-| WMA.    |          | 3. Contenedor licencia GNU                      |
-| FLAC.   |          | 4. Formato de sonido con compresión con pérdida |
+| Formato |
+| ------- |
+| Ogg.    |
+| AVI.    |
+| WMA.    |
+| FLAC.   |
+
+| Tipo de formato                                 |
+| ----------------------------------------------- |
+| 1. Contenedor de múltiples formatos             |
+| 2. Formato de sonido con compresión sin pérdida |
+| 3. Contenedor licencia GNU                      |
+| 4. Formato de sonido con compresión con pérdida |
 
   </summary>
   <div class="card-body" markdown="1">
 
-| Formato | Relación | Tipo de formato                                 |
-| ------- | -------- | ----------------------------------------------- |
-| Ogg.    |     3    | 1. Contenedor de múltiples formatos             |
-| AVI.    |     1    | 2. Formato de sonido con compresión sin pérdida |
-| WMA.    |     4    | 3. Contenedor licencia GNU                      |
-| FLAC.   |     2    | 4. Formato de sonido con compresión con pérdida |
+| Formato | Tipo de formato                                 |
+| ------- | ----------------------------------------------- |
+| Ogg.    | 3. Contenedor licencia GNU                      |
+| AVI.    | 1. Contenedor de múltiples formatos             |
+| WMA.    | 4. Formato de sonido con compresión con pérdida |
+| FLAC.   | 2. Formato de sonido con compresión sin pérdida |
 
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
@@ -149,4 +156,3 @@ En la web de Referencia de Mozilla tienes el artículo [Contenido de audio y vid
 - <https://www.avs4you.com/es/guides/How-to-convert-between-audio-formats.aspx>
 - <https://developer.mozilla.org/es/docs/Learn/HTML/Multimedia_and_embedding>
 - <https://logongas.es/doku.php?id=clase:daw:diw:2eval:tema09>
-- 
