--- a/_posts/2024-11-17-audio-web.md
+++ b/_posts/2024-11-17-audio-web.md
@@ -144,11 +144,23 @@ Relaciona los formatos con el tipo al que pertenecen.
 
 En la web de Referencia de Mozilla tienes el artículo [Contenido de audio y video](https://developer.mozilla.org/es/docs/Learn/HTML/Multimedia_and_embedding/Video_and_audio_content) donde puedes aprender cómo se puede añadir elementos de audio y video en una web.
 
+Y una lista de programas y webs con los que puedes cambiar audios de formato:
+
+- <https://ffmpeg.org/download.html>
+- <http://convertio.co/>
+
 ## Cómo conseguir sonidos
 
 (Voluntario) Mira el siguiente vídeo:
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/sNAOMArlBro?si=uxSuKPPh5ch7pN89" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+Te dejo una lista de webs donde podéis descargar audios:
+
+- <https://archive.org/details/audio>
+- <https://freesound.org/>
+- <http://bensound.com/>
+- <https://freemusicarchive.org/home>
 
 ## Bibliografía
 
