--- a/_posts/2024-11-18-video-web.md
+++ b/_posts/2024-11-18-video-web.md
@@ -196,6 +196,7 @@ Si no sabes ninguna herramienta con la que grabar vídeos puedes usar:
 - [Peek Screen Recorder](https://github.com/phw/peek): Para hacer GIFs o vídeos en MP4 de una manera rápida. **RECOMENDADO**.
 - **OBS Studio**: Herramienta profesional para grabación de vídeos para Windows y GNU Linux. Software libre.
 - **SimpleScreenRecorder**: Herramienta sencilla para grabación de videos para GNU Linux.
+- **Movavi Screen Recorder**: Herramienta para grabar videos.
 
 ## Programas para editar vídeos
 
@@ -211,6 +212,9 @@ Si no sabes ninguna herramienta con la que grabar vídeos puedes usar:
 - **Filmora**: Sencillo.
 - **Shotcut**: Gratuito.
 
+## Webs para descargar vídeos
+
+- <https://archive.org/details/movies>
 
 ## Bibliografía
 
